# Amadeus

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  PROJECT.md  README.md  demo.py  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  TRAINING_GUIDE.md  TRAINING_PIPELINE_REVIEW.md
docs/adr/: 0001-base-model-lora-architecture.md  0002-x-prediction-and-50hz-alignment.md
scripts/: download_models.py  run_overnight.bat  setup_windows.ps1  train_base.py
src/: __init__.py  config.py  main.py
src/app/: live2d_widget.py  window.py
src/audio/: asr.py  capture.py  pipeline.py
src/dialogue/: context.py  model.py  persona.py
src/live2d/: renderer.py
src/motion/: __init__.py  inference.py  model.py  performance.py
src/motion/preprocess/: __init__.py  arkit_to_live2d.py  body_skeleton.py  face_landmarker.py  pipeline.py  video_reader.py
src/motion/preprocess/mappings/: default.yaml
src/motion/training/: __init__.py  dataset.py  ema.py  lora.py  train.py  visualize.py
src/perception/: camera.py
src/tts/: engine.py
